2000-03-04  bertrand  <bertrand@helixcode.com>

	* camel-formatter.c (get_bonobo_tag_for_object): 
	bonobo-goad-id is the good key to look for. 
	(get_bonobo_tag_for_object): close the <object> tag.
	(get_bonobo_tag_for_object): the correct syntax for the
	to set a parameter inside an <object> tag is :
	<object classid="..."> <param name="uid" value="..."> <param ...>
	</object>

2000-03-03  bertrand  <bertrand@helixcode.com>

	* providers/mbox/camel-mbox-folder.c (_get_message_by_uid): 
	use set_input_stream instead of construct_from_stream
	to feed the message object. 

	* camel-data-wrapper.c (my_write_to_stream): reset output stream.
	(my_set_input_stream): unref the previous input stream.
	use the set_output_stream for default behaviour.
	(my_set_output_stream): unref previous output stream.

	* camel-mime-part.c (my_write_content_to_stream): reset content
	object output stream.

2000-03-03  NotZed  <NotZed@HelixCode.com>

	* providers/mbox/camel-mbox-utils.c (camel_mbox_write_xev): Make
	sure we open with create with a creation mask.

2000-03-01  NotZed  <NotZed@HelixCode.com>

	* camel-mime-part-utils.c
	(camel_mime_part_construct_content_from_stream): DO NOT assert on
	content type, we have fallback code 4 lines below it ... *sigh*

2000-02-29  NotZed  <NotZed@HelixCode.com>

	* Makefile.am (libcamelinclude_HEADERS): Added camel-stream-buffer
	to build.

	* camel-stream-buffer.[ch]: Generic buffer which can be applied to
	any stream.

2000-03-03  bertrand  <bertrand@helixcode.com>

	* camel-formatter.c (handle_image): in the case
	of images, put the content object output stream
	in the url. This allows the message browser
	to show inline images.

	* camel-stream-b64.c (my_read_encode): fixed state
	0 keep value. 

2000-03-02  bertrand  <bertrand@helixcode.com>

	* camel-stream-b64.c (my_read_encode): don't forget to 
	set the state to 0 after 3.
	(my_read_encode): don't forget to encode, even in state 3.
