@@ -140,11 +140,13 @@ my_write_to_stream (CamelDataWrapper *data_wrapper, CamelStream *stream)
 	g_assert (stream);
 	
 	array = simple_data_wrapper->byte_array;
-	if ( array && array->len)
+	if ( array && array->len) {
+		printf ("In simple data wrapper::write_to_stream, there is an array\n");
 		camel_stream_write (stream, (gchar *)array->data, array->len);
-	else 
+	} else { 
+		printf ("In simple data wrapper::write_to_stream, there is no array\n");
 		parent_class->write_to_stream (data_wrapper, stream);
-
+	}
 	CAMEL_LOG_FULL_DEBUG ("CamelSimpleDataWrapper:: Leaving my_write_to_stream\n");
 }
 
