@@ -487,11 +487,6 @@ _seek (CamelSeekableStream *stream, gint offset, CamelStreamSeekPolicy policy)
 	CamelStreamFs *stream_fs = CAMEL_STREAM_FS (stream);
 
 
-	/* because we don't know what is going to happen, we
-	   set the eof stream to false so that a reread can
-	   occur */
-	stream_fs->eof = FALSE;
- 
 	switch  (policy) {
 	case CAMEL_STREAM_SET:
 		real_offset = MAX (stream_fs->inf_bound + offset, stream_fs->inf_bound);
@@ -533,7 +528,8 @@ _seek (CamelSeekableStream *stream, gint offset, CamelStreamSeekPolicy policy)
 		
 	printf ("***** Seeking : real_offset=%d, whence=%d\n", real_offset, whence);
 	return_position =  lseek (stream_fs->fd, real_offset, whence) - stream_fs->inf_bound;
-	printf ("*** *** *** *** ***\n");
+	if (CAMEL_SEEKABLE_STREAM (stream)->cur_pos != return_position)
+		stream_fs->eof = FALSE;
 
 	CAMEL_SEEKABLE_STREAM (stream)->cur_pos = return_position;
 	
